# pyo3-buildozer

./: .gitignore  Cargo.toml  README.md  buildozer.Dockerfile  buildozer.spec  main.py
.cargo/: config
p4a/my_lib/: __init__.py
src/: lib.rs
