[package]
name = "pyo3-buildozer"
version = "0.1.0"
authors = ["Rene Leveille <reneb.leveille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "my_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.11.1", features = ["extension-module"] }